[feat] TDD 코드
- 빌드 기록
- TDD 코드 완
- 빌드 서비스 컨테이너에 등록 안됌( 환경변수 꼬임 )